@@ -96,7 +96,7 @@ namespace Avogadro {
 
     if (pd->isSelected(a))
     {
-      map->set( 0.3, 0.6, 1.0, 0.7 );
+      map->setToSelectionColor();
       glEnable( GL_BLEND );
       pd->painter()->setColor(map);
       pd->painter()->setName(a);
@@ -131,7 +131,7 @@ namespace Avogadro {
     // Render the selection highlight
     if (pd->isSelected(b))
     {
-      map->set( 0.3, 0.6, 1.0, 0.7 );
+      map->setToSelectionColor();
       glEnable( GL_BLEND );
       pd->painter()->setColor(map);
       pd->painter()->setName(b);
